argocd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-app
  labels:
    app: dex-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: dex-app
